[tool.poetry]
name = "pdk8s"
version = "0.2.2"
description = ""
authors = ["Florian Ludwig <f.ludwig@greyrook.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "*"
pyyaml = "*"
click = "*"
cookiecutter = "*"
setuptools = "*"
datamodel-code-generator = "^0.20"
xdg = "*"

[tool.poetry.dev-dependencies]
# pytest = "*"
# mypy = "*"
# pylint = "*"
# black = "*"
# pytest-cov = "*"

[tool.poetry.scripts]
pdk8s = 'pdk8s.cli:main'

[tool.black]
skip-string-normalization = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"